--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "watch": "babel ./client/src --out-dir client/public/compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline --watch"
   },
   "dependencies": {
+    "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "bcrypt": "^1.0.3",
@@ -22,8 +23,8 @@
     "express-session": "^1.15.6",
     "jquery": "^3.2.1",
     "mongoose": "^4.11.9",
+    "nodemon": "^1.12.1",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "babel-cli": "^6.26.0"
+    "react-dom": "^15.6.1"
   }
 }
