--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "querystring": "^0.2.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "spotify-web-api-js": "^0.22.1"
+    "spotify-web-api-js": "^0.22.1",
+    "twilio": "^3.8.0"
   }
 }
