--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^4.11.9",
     "nodemon": "^1.12.1",
     "querystring": "^0.2.0",
+    "node-schedule": "^1.2.5",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "spotify-web-api-js": "^0.22.1",
