--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
     "cookie-parser": "^1.4.3",
+    "cron": "^1.3.0",
     "express": "^4.15.4",
     "express-session": "^1.15.6",
     "jquery": "^3.2.1",
     "mongoose": "^4.11.9",
     "nodemon": "^1.12.1",
     "querystring": "^0.2.0",
-    "node-schedule": "^1.2.5",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "spotify-web-api-js": "^0.22.1",
