--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.15.4",
     "express-session": "^1.15.6",
     "jquery": "^3.2.1",
+    "moment": "^2.19.1",
     "mongoose": "^4.11.9",
     "nodemon": "^1.12.1",
     "querystring": "^0.2.0",
