--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "watch": "babel ./client/src --out-dir client/public/compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline --watch"
   },
   "dependencies": {
+    "aws-sdk": "^2.133.0",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
@@ -24,6 +25,7 @@
     "cron": "^1.3.0",
     "express": "^4.15.4",
     "express-session": "^1.15.6",
+    "fs": "0.0.1-security",
     "jquery": "^3.2.1",
     "moment": "^2.19.1",
     "mongoose": "^4.11.9",
